--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "clipboard": "^2.0.11",
+    "clipboard-copy": "^4.0.1",
     "cloudinary": "^1.27.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
